New footer, new nav, and other small changes

--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -8,7 +8,7 @@
     <h1 class="h2 center"><b>
       <a href="{{ .Permalink }}" class="silent">{{ .Title }}</a>
     </b></h1>
-    <p class="center ingrained">a {{ .ReadingTime }} min read by Mantas Vilčinskas on {{ .Date.Format "Jan 2, 2006" }}</p>
+    <p class="center ingrained">a {{ .ReadingTime }} minute read by Mantas Vilčinskas on {{ .Date.Format "January 2, 2006" }}</p>
 
     <p>{{ .Params.description }}</p>
 
