--- a/layouts/partials/nav-items.html
+++ b/layouts/partials/nav-items.html
@@ -1,4 +1,5 @@
 <li><a href="/tour">Features</a></li>
 <li><a href="/pricing">Pricing</a></li>
 <li><a href="/creators">Creators</a></li>
-<li class="nav-bar__list--last-item"><a href="/community">Community</a></li>
+<li><a href="/early-access">Early Access</a></li>
+<li class="nav-bar__list--last-item"><a href="/community">About</a></li>
