Functions don't have dots in Golang?

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -83,7 +83,7 @@
 
       <!-- Legal -->
       <div class="break-sm"></div>
-      <p class="ingrained">&copy; {{ .now.Year }}<br>
+      <p class="ingrained">&copy; {{ now.Year }}<br>
       <span class="ingrained">Some rights reserved</span></p>
     </figure>
     <figure class="col-fifth center-mobile">
