--- a/src/scss/components/dropins.scss
+++ b/src/scss/components/dropins.scss
@@ -53,6 +53,8 @@
 
 .background {
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 .stretch-img {
