fix: display site menu in safari
The site menu wasn't being rendered correctly in the safari browser due
to some issue with `position: fixed` being applied to the element.

This patch changes the `position: fixed` to a `position: relative` and
fiddles with the layout and margins a bit to get the menu to go to the
correct position.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -662,10 +662,9 @@ img[data-src] {
     display: block;
     background: #fff;
     box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.2);
-    position: fixed;
+    position: relative;
     width: calc(100% - 2rem);
-    top: 2rem;
-    margin: 1rem;
+    margin: 0 1rem 1rem 1rem;
     animation: fadeup 0.2s; }
     .nav-mobile.nav-mobile--active .nav-mobile__list ul {
       line-height: 1.8;
